change: add proper translatable keys to cycling list options